fixed agreement spacing - still need checkbox, agreement hover and scroll

--- a/src/layouts/index.module.less
+++ b/src/layouts/index.module.less
@@ -218,7 +218,7 @@ input {
   .mobileBreak {
     display: none;
   }
-  .ant-checkbox + span {
+  :global(.ant-checkbox + span) {
     padding-left: 16px;
   }
 }
